--- a/src/components/search/autosuggest.css
+++ b/src/components/search/autosuggest.css
@@ -36,8 +36,7 @@
   position: absolute;
   top: 51px;
   width: 280px;
-  border: 1px solid #aaa;
-  background-color: #fff;
+  background-color: "inherit";
   font-family: "Open Sans", sans-serif;
   font-weight: 300;
   font-size: 16px;
